typescript/checker/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNumberAndEnum.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            37,
        ),
        hi: BytePos(
            38,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNumberAndEnum.ts:4:5
  |
4 | var a: number;
  |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            52,
        ),
        hi: BytePos(
            53,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNumberAndEnum.ts:5:5
  |
5 | var b: E;
  |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            62,
        ),
        hi: BytePos(
            63,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNumberAndEnum.ts:6:5
  |
6 | var c: E | F;
  |     ^

